<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Prayer Time</string>
	<string name="location_setting_title">Location Setting</string>
	
	<string name="upcoming_prayer">Upcoming Prayer</string>
	
	<string name="search_location">Search location</string>
	<string name="use_current_location">Use current location</string>
	
	<string name="prayer_imsak_name">Imsak</string>
	<string name="prayer_fajr_name">Fajr</string>
	<string name="prayer_dhuhr_name">Dhuhr</string>
	<string name="prayer_asr_name">Asr</string>
	<string name="prayer_maghrib_name">Maghrib</string>
	<string name="prayer_isha_name">Isha</string>
	
	<string name="menu_settings">Settings</string>
	<string name="pref_disable_notification">Disable notification</string>
    <string name="pref_disable_notification_summary">Turn off all notification</string>
    <string name="pref_language">Language</string>
    <string name="pref_calculation_method">Calculation method</string>
    <string name="pref_asr_method">Asr method</string>
    
    <string name="pref_general">General</string>
    <string name="pref_time_calculation">Time Calculaition</string>
    <string name="pref_manual_tunning">Manual Tuning</string>
    
    <string name="praf_location_title">Location</string>
    <string name="pref_auto_detect_location">Auto detect location</string>
    <string name="pref_auto_detect_location_summary">Use current location automatically</string>
	
    <string name="pref_on_prayer">On Prayer</string>
    <string name="pref_before_prayer">Before Prayer</string>
    <string name="pref_alarm">Alarm</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_notify_before">Notify before</string>
    
    <string name="default_notify_before">5</string>
    <string name="default_alarm">azan1</string>
    <string name="default_manual_tume">0.5</string>
    
    <string name="pref_minutes">Mins</string>
    <string name="pref_hours">Hours</string>
    <string name="left_until">left until</string>
    
    <string name="notification_setup_title">%1$s Notification Setup</string>
    
    <!-- Notification -->
    <string name="notif_on_prayer">It\'s time to pray</string>
    <string name="notif_before_pray">minutes to pray</string>
    <string name="notif_title">Prayer Time</string>
    
    <string name="notif_dismiss">Dismiss</string>
    
</resources>
